# alterios-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: administrator-guide.md  agents-and-skills.md  alterios-entity-surface-catalog.md  alterios-icon-library-audit.md  alterios-icon-standards.md  alterios-icons-and-actions-catalog.md  alterios-method-coverage.md  architecture.md  browser-ui-discovery.md  business-requirements-analyst-agent.md  controlled-writes.md  development-cycle-and-agent-workflow.md  discovery-plan.md  expanded-user-scenarios.md  form-surface-inventory.json  form-surface-inventory.md  form-surface-ux-and-icons.md  git-team-workflow.md  gitea-private-workboard.md  gost-documentation-scribe-agent.md  icon-usage-matrix.json  live-write-evidence-2026-07-10.md  material-types-and-view-types-research.md  mcp-tool-profiles.md  optimization-plan.md  profile-smoke-matrix-2026-07-10.json  profile-smoke-matrix-2026-07-10.md  project-management.md  project-status.md  public-repository-data-policy.md  reinventory-2026-07-10.md  report-tab-openid-ui-research-2026-07-10.md  roadmap.md  runtime-hygiene.md  script-bpmn-linkage.json  script-bpmn-linkage.md  script-diagram-report-research-2026-07-10.md  script-runtime-catalog.md  skill-forward-test-2026-07-10.md  skill-installation.md  (+7 more)
scripts/: artx_practice_metadata.py  check_public_tree.py  install_repo_skills.py  manage_release.ps1  verify_release_wheel.py
tests/: test_artx_practice_metadata.py  test_bulk_live.py  test_client.py  test_deep_inventory.py  test_delivery_evidence.py  (+32 more)
(+105 files in other folders)
